@@ -281,6 +281,9 @@ public class TestBlockReplacement {
     DataInputStream reply = new DataInputStream(sock.getInputStream());
 
     BlockOpResponseProto proto = BlockOpResponseProto.parseDelimitedFrom(reply);
+    while (proto.getStatus() == Status.IN_PROGRESS) {
+      proto = BlockOpResponseProto.parseDelimitedFrom(reply);
+    }
     return proto.getStatus() == Status.SUCCESS;
   }
 
